fix: text Y overflow on album performers line

--- a/front/scss/service/mainpage.scss
+++ b/front/scss/service/mainpage.scss
@@ -355,6 +355,7 @@
           padding-left: var(--font-size);
 
           span {
+            height: 100%;
             padding-right: var(--padding-small);
             position: relative;
             width: auto;
